--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -5,6 +5,10 @@
 
   @include line-height(16,18,20,29.64);
   @include font-size(16,20);
+
+  @media (--wide-vp) {
+    padding-bottom: 23px;
+  }
 }
 
 .form__section {
@@ -19,6 +23,7 @@
 
   @media (--wide-vp) {
     grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 0;
   }
 }
 
@@ -53,13 +58,14 @@
   @media (--wide-vp) {
     display: flex;
     justify-content: flex-start;
+    transform: translateY(-9px);
   }
 }
 
 .form__button {
   margin-bottom: 21px;
 
-  @media (--middle-vp) {
+  @media (--not-narrow-vp) {
     min-height: 49px;
     min-width: 283px;
   }
