--- a/source/sass/blocks/footer-container.scss
+++ b/source/sass/blocks/footer-container.scss
@@ -14,4 +14,9 @@
     justify-content: space-between;
     column-gap: 15px;
   }
+
+  // @media (--wide-vp) {
+  //   transform: translateY(72px);
+  //   align-items: center;
+  // }
 }
