--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -19,6 +19,6 @@
 }
 
 :root {
-  --accent-font: "Oswald", "Impact", sans-serif;
+  --accent-font: "Oswald", "Verdana", sans-serif;
   --main-font: "Arial", "Helvetica", sans-serif;
 }
