--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -11,6 +11,7 @@
   --color__light-grey: #cdcdcd;
   --color__form-input-error: #ff8282;
   --color__outline: #e98411;
+  --light-text: #222222;
 }
 
 //font-size defaults !for mixins only!
