--- a/source/sass/blocks/demo-cat.scss
+++ b/source/sass/blocks/demo-cat.scss
@@ -134,6 +134,7 @@
   margin: 0;
   text-align: center;
   font-family: var(--main-font);
+  color: var(--color__dark-grey);
 
   @include line-height(12,12,14,14);
   @include font-size(12,14);
