--- a/source/sass/blocks/extra.scss
+++ b/source/sass/blocks/extra.scss
@@ -18,7 +18,6 @@
 .extra__item {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  // padding-top: 13px;
   padding-bottom: 15px;
   align-items: baseline;
   border-top: 1px solid var(--color__light-grey);
@@ -31,7 +30,6 @@
   }
 
   @media (--wide-vp) {
-    /*grid-template-columns: 290px 80px 245px 80px 245px;*/
     grid-template-columns: 27% 9.5% 27% 9.5% 27%;
     padding: 16px 0 11px 0;
     border-left: none;
@@ -46,6 +44,7 @@
   font-family: var(--accent-font);
   font-weight: 400;
   text-transform: uppercase;
+  color: var(--light-text);
 
   @include line-height(16,16,20,20);
   @include font-size(16,20);
@@ -65,6 +64,7 @@
   margin-bottom: 12px;
   grid-column: 1 / 2;
   font-family: var(--main-font);
+  color: var(--color__dark-grey);
 
   @include line-height(14,20,16,20);
   @include font-size(14,16);
@@ -87,6 +87,7 @@
   text-align: right;
   font-family: var(--main-font);
   font-weight: 400;
+  color: var(--color__dark-grey);
 
   @include line-height(14,20,16,20);
   @include font-size(14,16);
