--- a/source/sass/blocks/academy.scss
+++ b/source/sass/blocks/academy.scss
@@ -1,3 +1,10 @@
+.academy {
+  @media (--not-narrow-vp) {
+    display: grid;
+    justify-content: end;
+  }
+}
+
 .academy-logo {
   grid-column: 3;
   display: flex;
