--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -42,7 +42,7 @@
             {% endfor %}
           </ul>
         </div>
-        <div class="social__academy">
+        <div class="academy">
           <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"  rel="noreferrer">HTML Academy</a>
         </div>
       </div>
