--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,7 +28,7 @@
 @import "./blocks/footer-logo.scss";
 @import "./blocks/footer-container.scss";
 @import "./blocks/social.scss";
-@import "./blocks/academy-logo.scss";
+@import "./blocks/academy.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/product.scss";
 @import "./blocks/product-block.scss";
